package cn.cdut.sixpan.Bean;

public class ResultChangeName extends Result {
    private Boolean result;

    public Boolean getResult() {
        return result;
    }

    public void setResult(Boolean result) {
        this.result = result;
    }
}
