package cn.cdut.sixpan.Bean;

public class ResultFile extends Result {
    protected FileList result;

    public FileList getResult() {
        return result;
    }

    public void setResult(FileList result) {
        this.result = result;
    }
}
