package cn.cdut.sixpan.Bean;

public class ResultFilePage extends Result {
    protected FileListPage result;

    public FileListPage getResult() {
        return result;
    }

    public void setResult(FileListPage result) {
        this.result = result;
    }
}
