package cn.cdut.a6pan.Bean;

public class ResultFileSingle extends Result {
}
