package cn.cdut.sixpan.Bean;

public class ResultPerson extends Result{

    private Person result;


    public Person getResult() {
        return result;
    }

    public void setResult(Person result) {
        this.result = result;
    }
}
