package cn.cdut.sixpan.Bean;

public class ResultSendMessage extends Result{
    private String result;

    public String getResult() {
        return result;
    }

    public void setResult(String result) {
        this.result = result;
    }
}
